--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,82 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #F0F2F5;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+#btn-subHeader {
+  border: none;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.65);
+  margin-right: 1%;
+}
+#btn-subHeader:hover{
+  filter: opacity(.5);
+  cursor: pointer;
+}
+
+
+
+#text-subHeader {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 32px;
+}
+
+
+
+
+#title-h1 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 32px;
+  margin-left: 34px;
+  
+}
+
+#wrapper {   
+  width: 100%;
+  margin-top: 20px;
+  background-color: #FFFFFF;
+  box-shadow: inset 0px -1px 0px #D9D9D9
+}
+
+
+#btn_status {
+  border-radius: 4px;
+  border: 1px solid #D9D9D9;
+  padding: 4px 12px;
+  width: 70px;
+}
+
+
+
+@media screen and (max-width : 900px) {
+  #title-h1 {
+    margin-left : 2%; 
+    
+  }
+
+}
+
+
+.span-date{
+  color : rgba(0, 0, 0, 0.45);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.project-name{
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 16px;
+  font-weight: 400;
 }
